# CppCCQTemplate

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
CMake/: conan.cmake
src/: CMakeLists.txt
src/App/: CMakeLists.txt  Window1.cpp  Window1.h  Window1.ui  main.cpp
src/App/res/: MyApp.qrc
src/MyLib/: CMakeLists.txt  MyClass.cpp  MyClass.h
test/: CMakeLists.txt  MyLibTest.cpp  testmain.cpp
